--- a/TODO.txt
+++ b/TODO.txt
@@ -7,5 +7,6 @@
 - Add competition scores and link them to members
 - Settings page under admin route
 - Add further member data (email? height? weight?)
-- Add unique key for sessions rather than using date (since that can be edited)
+- Add unique key for sessions rather than using date (since that can be edited); should stop inserting sessions by date and move sorting to elsewhere
 - Setting for where to split one year from the next (e.g. academic year periods)
+- Refactor into smaller parts where possible (e.g. components and mixins)
