Added settings component, requiring slight restructure of db

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,11 @@
-- Fully switch /graph and /members, rather than just switching the routes in Home.vue
+# Fully switch /graph and /members, rather than just switching the routes in Home.vue
 - Ctrl+click on member cards to compare
 - Add in rest of data from squad book (goals/conditioning)
 - Add in last year's data
 - Show data for specified time ranges (e.g. "show data for current year only")
 - Clicking on an individual session should show a page with all the data for that session, including chart(?) for times of flight
 - Add competition scores and link them to members
-- Settings page under admin route
+- Settings page under admin route => put settings in a sidebar (vuetify sidebar?)
 - Add further member data (email? height? weight?)
 - Add unique key for sessions rather than using date (since that can be edited); should stop inserting sessions by date and move sorting to elsewhere
 - Setting for where to split one year from the next (e.g. academic year periods)
