--- a/TODO.txt
+++ b/TODO.txt
@@ -12,3 +12,4 @@
 - Refactor into smaller parts where possible (e.g. components and mixins)
 - Make stats block(s?) into a component, and put all stats methods into a mixin
 - Add way of adding exercise sessions, and rows to tables
+- Restructure store and requestsMixin so as to import only what's needed and not have to update the entire db every time
