Refactoring request methods into the mixin file

--- a/TODO.txt
+++ b/TODO.txt
@@ -6,7 +6,7 @@
 - Clicking on an individual session should show a page with all the data for that session, including chart(?) for times of flight
 - Add competition scores and link them to members
 # Settings page under admin route => put settings in a sidebar (vuetify sidebar?)
-- Add further member data (email? height? weight?)
+- Add further member data (email? height? weight? skills known? competitive level? photo? age/dob?)
 - Add unique key for sessions rather than using date (since that can be edited); should stop inserting sessions by date and move sorting to elsewhere
 - Setting for where to split one year from the next (e.g. academic year periods)
 - Refactor into smaller parts where possible (e.g. components and mixins)
@@ -17,3 +17,5 @@
 - Add admin setting
 - More consistent styling (e.g. titles) across components/views
 - Ability to compare periods for a single member (e.g. this year vs last)
+- Move saving to db into store modules? Then store and db would always be in sync after a dispatch
+- Defer loading from db until needed?
